--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,45 +101,46 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //google and firebase
-    implementation 'com.google.firebase:firebase-auth:19.3.2'
-    implementation 'com.google.android.gms:play-services-ads:19.3.0'
-    implementation 'com.google.firebase:firebase-core:17.5.0'
-    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
-    implementation 'com.google.android.gms:play-services-auth:18.1.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.android.gms:play-services-ads:20.3.0'
+    implementation 'com.google.firebase:firebase-core:19.0.1'
+    implementation 'com.google.android.gms:play-services-analytics:17.0.1'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.google.ads.interactivemedia.v3:interactivemedia:3.11.2'
-    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
-    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
     // Add the dependency for the Performance Monitoring library
-    implementation 'com.google.firebase:firebase-perf:19.0.8'
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    implementation 'com.google.firebase:firebase-perf:20.0.2'
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.1'
 
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
     androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     })
 
-    implementation 'com.google.android.material:material:1.2.1'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    //noinspection LifecycleAnnotationProcessorWithJava8
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.3.1'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'io.branch.sdk.android:library:4.3.1'
-    implementation 'androidx.browser:browser:1.0.0'
-    implementation 'com.google.firebase:firebase-appindexing:19.1.0'
+    implementation 'io.branch.sdk.android:library:5.0.7'
+    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'com.google.firebase:firebase-appindexing:20.0.0'
 
 
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.7.1"
@@ -156,13 +157,13 @@ dependencies {
     implementation 'com.itkacher.okhttpprofiler:okhttpprofiler:1.0.7'
 
    //Dagger Dependencies em
-    implementation 'com.google.dagger:dagger:2.27'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
-    kapt 'com.google.dagger:dagger-compiler:2.24'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.dagger:dagger:2.28.3'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.28.3'
+    kapt 'com.google.dagger:dagger-compiler:2.28.3'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.maps.android:android-maps-utils:0.4'
-    implementation "androidx.mediarouter:mediarouter:1.1.0"
-    implementation "com.brightcove.player:android-cast-plugin:6.13.3"
+    implementation "androidx.mediarouter:mediarouter:1.2.4"
+    implementation "com.brightcove.player:android-cast-plugin:6.16.0"
 
     //Shimmer recycleview liberary
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
@@ -172,15 +173,15 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.abdularis:parallaximageview:1.1'
     ///Room Dependency
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
     kapt "android.arch.persistence.room:compiler:1.1.1"
 
     //Firebase Analytics
-    implementation 'com.google.firebase:firebase-analytics:17.5.0'
-    implementation 'com.google.android.play:core:1.8.0'
+    implementation 'com.google.firebase:firebase-analytics:19.0.1'
+    implementation 'com.google.android.play:core:1.10.0'
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
-    implementation "com.android.installreferrer:installreferrer:1.0"
+    implementation "com.android.installreferrer:installreferrer:2.2"
 
     //chips
     implementation 'com.xiaofeng.android:flowlayoutmanager:1.2.3.2'
