--- a/brightcovelibrary/build.gradle
+++ b/brightcovelibrary/build.gradle
@@ -43,20 +43,21 @@ repositories {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api 'androidx.appcompat:appcompat:1.2.0'
-    api 'androidx.constraintlayout:constraintlayout:2.0.1'
+    api 'androidx.appcompat:appcompat:1.3.1'
+    api 'androidx.constraintlayout:constraintlayout:2.1.0'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    api "com.brightcove.player:exoplayer2:6.13.3"
-    api "com.brightcove.player:android-appcompat-plugin:6.13.3"
-    implementation "com.brightcove.player:android-ima-plugin:6.13.3"
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    api "com.brightcove.player:exoplayer2:6.16.0"
+    api "com.brightcove.player:android-appcompat-plugin:6.16.0"
+    implementation "com.brightcove.player:android-ima-plugin:6.16.0"
     implementation 'com.google.ads.interactivemedia.v3:interactivemedia:3.11.2'
     implementation "com.brightcove.player:android-cast-plugin:6.16.0"
     //s
-    implementation 'com.google.android.gms:play-services-ads:19.3.0'
+    implementation 'com.google.android.gms:play-services-ads:20.3.0'
     implementation 'androidx.core:core-ktx:+'
+    //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
